Button hover Effect Changed

--- a/button.html
+++ b/button.html
@@ -15,7 +15,7 @@
         cursor: pointer;
     }
     .save-btn:hover{
-        background-color:green;
+        background-color:lime;
     }
 </style>
 <body>
