Changes in  NewMerge.html In main Branch

--- a/NewMerge.html
+++ b/NewMerge.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>For Merging the Branch</h1>
+    <h1>Changed from Main Branch</h1>
 </body>
 </html>
