--- a/button.html
+++ b/button.html
@@ -11,7 +11,7 @@
         padding:6px 12px;
         border:none;
         border-radius:3px;
-        color:#fff;
+        color:#000;
         cursor: pointer;
     }
     .save-btn:hover{
